--- a/styles.css
+++ b/styles.css
@@ -34,17 +34,23 @@
 /* font size */
 
 .c-fs-1{
-    font-size: 40px;
+
+    /* font-size: 40px; */
+    font-size: clamp(21px, 8vw, 40px);
 }
 .c-fs-2{
-    font-size: 32px;
+    /* font-size: 32px; */
+    font-size: clamp(21px,6vw,32px);
 }
 .c-fs-3{
-    font-size: 26px;
+    /* font-size: 26px; */
+    font-size: clamp(12px,4vw,26px);
 }
 .c-fs-4{
-    font-size: 18px;
+    /* font-size: 18px; */
+    font-size: clamp(8px,3vw,18px);
 }
+
 
 /* font */
 
@@ -71,7 +77,7 @@ body{
 .c-navbar{
     font-family: soleilregular;
     background-color: #E8AE3D;
-    height: 80px;
+    height: clamp(50px,10vw,80px);
 }
 .c-btn-primary{
     color: #000000;
@@ -95,6 +101,6 @@ body{
     
 }
 .app-store-logo{
-    width: 50px;
+    width: clamp(20px,6vw,40px);
 }
 
