res mod & emoji added

--- a/reset.css
+++ b/reset.css
@@ -1,5 +1,8 @@
-p{
+h1,h2,h3,h4,p{
     padding: 0!important;
     margin: 0!important;
-    line-height: auto;
+    line-height: 1.2em;
+}
+p{
+    letter-spacing: 3%;
 }
