--- a/styles.css
+++ b/styles.css
@@ -109,7 +109,7 @@ body{
     
 }
 .app-store-btn{
-    width: 200px;
+    width: clamp(160px,40vw,200px)  ;
 }
 .app-store-logo{
     width: clamp(20px,6vw,33px);
