--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@
 .c-fs-1{
 
     /* font-size: 40px; */
-    font-size: clamp(21px, 8vw, 40px);
+    font-size: clamp(21px, 8vw, 48px);
 }
 .c-fs-2{
     /* font-size: 32px; */
@@ -70,7 +70,7 @@ p{
 .c-f-h{
     font-family: Bely;
 }
-.c-f-h-h{
+.c-f-h-b{
     font-family: BelyBold;
 }
 .c-f-b{
@@ -95,10 +95,25 @@ body{
 
 .halfkg-logo{
     width:clamp(108px,20vw,168px);
+    margin: clamp(30px,5vw,60px) 0;
+}
+.hero-sec{
+    height: 100%;
+}
+@media screen and (max-width: 600px) {
+    .hero-sec{
+        height: 60vh;
+    }
+
+  }
+
+.qr-code{
+    height: 63vh;
 }
 .c-btn{
     padding: 0;
 }
+
 .c-btn-primary{
     color: #000000;
     border: #000000 2px solid;
@@ -121,9 +136,16 @@ body{
     
 }
 .app-store-btn{
-    width: clamp(160px,40vw,200px)  ;
+    width: clamp(150px,40vw,220px)  ;
 }
 .app-store-logo{
     width: clamp(19px,6vw,33px);
+}
+.chat-w{
+    position: fixed;
+    bottom: 2vh;
+    right: 2vh;
+    /* background-color: white; */
+
 }
 
