--- a/styles.css
+++ b/styles.css
@@ -100,9 +100,21 @@ body{
 .hero-sec{
     height: 100%;
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 900px) {
     .hero-sec{
-        height: 60vh;
+        height:70vh;
+    }
+
+  }
+@media screen and (max-width: 700px) {
+    .hero-sec{
+        height:60vh;
+    }
+
+  }
+@media screen and (max-width: 500px) {
+    .hero-sec{
+        height:50vh;
     }
 
   }
